<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference 
        android:key="url_sincronizacion" 
        android:summary="@string/url_sincronizacion_summary" 
        android:title="@string/url_sincronizacion"
        android:defaultValue="http://www.google.com"/>
 
    <EditTextPreference android:summary="@string/reintentos_conexion_summary" android:key="reintentos_conexion" android:title="@string/reintentos_conexion" android:defaultValue="3"/>
    <EditTextPreference android:summary="@string/tiempo_espera_reintento_summary" android:key="tiempo_espera_reintento" android:title="@string/tiempo_espera_reintento" android:defaultValue="2000"/>
    <EditTextPreference android:enabled="false" android:key="tipo_censo" android:defaultValue="-1"/>
    <EditTextPreference android:enabled="false" android:key="unidad_medica" android:defaultValue="-1"/>
    <CheckBoxPreference android:key="es_instalacion_nueva" android:enabled="false" android:defaultValue="true"/><EditTextPreference android:enabled="false" android:key="fecha_ultima_sincronizacion"/>
    <CheckBoxPreference android:key="ultima_sincronizacion_exitosa" android:defaultValue="false" android:enabled="false"/>
    <CheckBoxPreference android:key="requiere_actualizar_version_apk" android:defaultValue="false" android:enabled="false"/>
    <EditTextPreference android:key="url_actualizacion_apk" android:defaultValue="http://www.servidor.com"/>
    
    

</PreferenceScreen>
