<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <!-- Título -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="Acceso a la TES"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <ImageButton
            android:id="@+id/btnAyuda"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ayuda"
            android:scaleType="centerCrop"
            android:src="@drawable/ayuda" />

        <!-- Línea horizontal -->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/btnAyuda"
            android:background="@android:color/darker_gray" />
    </RelativeLayout>

    <!-- Contenido -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView android:id="@+id/lblUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/usuario" />

        <Spinner
            android:id="@+id/spUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            tools:listitem="@android:layout/simple_spinner_dropdown_item" />
    </LinearLayout>

    
    <LinearLayout android:id="@+id/pnPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="Contraseña" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:digits="@string/caracteres_permitidos"
            android:inputType="textPassword" />

    </LinearLayout>
    
    <LinearLayout
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button android:id="@+id/btnSincronizar"
            style="@style/boton"
            android:text="@string/sincronizacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp" />
        
        <Button android:id="@+id/btnAcceder"
            style="@style/boton"
            android:text="Acceder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"/>
        
        <Button android:id="@+id/btnInvitado"
            style="@style/boton"
            android:text="Acceder como Invitado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"/>
        
        <Button android:id="@+id/btnCancelar"
            style="@style/boton"
            android:text="@string/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    
</LinearLayout>